[gd_scene load_steps=40 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/art/ui/touch_button_left.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/touch_button_right.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/touch_button_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/touch_button_fire.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Gun.gd" type="Script" id=9]
[ext_resource path="res://assets/art/player/idle.png" type="Texture" id=10]
[ext_resource path="res://assets/art/player/jump.png" type="Texture" id=11]
[ext_resource path="res://assets/art/player/run.png" type="Texture" id=12]
[ext_resource path="res://assets/art/player/walk.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 14 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 14 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 2000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 4000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 6000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 8000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 10000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 12000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 2000, 0, 2000, 2000 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 2000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 4000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 6000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 8000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 8000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 6000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 4000, 0, 2000, 2500 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "walking",
"speed": 15.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 2.5
}, {
"frames": [  ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "falling",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 16
script = ExtResource( 1 )
speed = Vector2( 350, 350 )

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 2 )
hframes = 16
vframes = 2

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 14, 1 )
script = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite/Gun"]
position = Vector2( -30.6589, -6.13176 )
stream = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="Sprite/Gun"]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 11 )

[node name="DamageDetector" type="Area2D" parent="."]
position = Vector2( 8, -6 )
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
modulate = Color( 0.219608, 1, 0, 0.772549 )
position = Vector2( -8, -8 )
shape = SubResource( 12 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[node name="Hunger" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -18 )
scale = Vector2( 0.02, 0.02 )
frames = SubResource( 15 )
animation = "walking"
frame = 2
playing = true

[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
[connection signal="body_exited" from="DamageDetector" to="." method="_on_DamageDetector_body_exited"]
[connection signal="timeout" from="Hunger" to="." method="_on_Hunger_timeout"]
